[skip ci] deploy gh-pages

--- a/RFC-0010_CodeStructure.html
+++ b/RFC-0010_CodeStructure.html
@@ -193,7 +193,7 @@ deployed as part of the Tari network.</p>
 <ul>
 <li>A base node executable (tari_base_node)</li>
 <li>A Command Line Interface (CLI) wallet for the Tari cryptocurrency (tari_console_wallet)</li>
-<li>A standalone miner (tari_mining_node)</li>
+<li>A standalone miner (tari_miner)</li>
 <li>A mining proxy to enable merge mining Monero (tari_merge_mining_proxy)</li>
 <li>An Application Programming Interface (API) server for the base node (REST, gRPC, etc.)</li>
 </ul>
@@ -210,7 +210,7 @@ deployed as part of the Tari network.</p>
 <ul>
 <li><code>tari_base_node</code> - the Base Node application</li>
 <li><code>tari_console_wallet</code> - the CLI Wallet application</li>
-<li><code>tari_mining_node</code> - the SHA3 Mining Node (CPU)</li>
+<li><code>tari_miner</code> - the SHA3 Miner (CPU)</li>
 <li><code>tari_merge_mining_proxy</code> - the Merge Mining Proxy</li>
 <li><code>tari_explorer</code> - a local web based block explorer</li>
 </ul>
